--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "dmx-ts": "^0.2.0"
+    "dmx-ts": "^0.2.0",
+    "express": "^4.17.2"
   }
 }
