--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dmx-ts": "^0.2.0",
     "express": "^4.17.2",
     "ngrok": "^4.3.1",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "raspi": "^6.0.1",
+    "raspi-gpio": "^6.2.2"
   }
 }
