Switch GPIO library

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "express": "^4.17.2",
     "ngrok": "^4.3.1",
     "node-fetch": "^3.2.3",
-    "raspi": "^6.0.1",
-    "raspi-gpio": "^6.2.2"
+    "pigpio": "^3.3.1"
   }
 }
